add test logback config